Using text gui to display achievement

--- a/MetroidVania/Assembly-CSharp-vs.csproj
+++ b/MetroidVania/Assembly-CSharp-vs.csproj
@@ -39,15 +39,14 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>D:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>D:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AIBehaviour.cs" />
-     <Compile Include="Assets\Scripts\Achievement.cs" />
      <Compile Include="Assets\Scripts\DieBehaviour.cs" />
      <Compile Include="Assets\Scripts\IObserver.cs" />
      <Compile Include="Assets\Scripts\KillPlayer.cs" />
@@ -75,6 +74,12 @@
      <Compile Include="Assets\Scripts\Patterns\Memento\CheckPointOriginator.cs" />
      <Compile Include="Assets\Scripts\Patterns\ObjectPool\ObjectPool.cs" />
      <Compile Include="Assets\Scripts\Patterns\ObjectPool\TestObject.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Observer\Achievement.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Observer\EnemySubject.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Observer\KillAchievement.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Observer\Observer.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Observer\SlideInText.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Observer\Subject.cs" />
      <Compile Include="Assets\Scripts\Patterns\Prototype\ArrowBehaviour.cs" />
      <Compile Include="Assets\Scripts\Patterns\Singleton\GameManager.cs" />
      <Compile Include="Assets\Scripts\Patterns\State\AIState.cs" />
@@ -88,10 +93,10 @@
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
- <HintPath>D:/Program Files (x86)/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
