--- a/MetroidVania/Assembly-CSharp.csproj
+++ b/MetroidVania/Assembly-CSharp.csproj
@@ -39,17 +39,20 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>D:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>D:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AIBehaviour.cs" />
      <Compile Include="Assets\Scripts\DieBehaviour.cs" />
      <Compile Include="Assets\Scripts\IObserver.cs" />
+     <Compile Include="Assets\Scripts\KillOnHitBehaviour.cs" />
      <Compile Include="Assets\Scripts\KillPlayer.cs" />
+     <Compile Include="Assets\Scripts\Other\GameEndBehaviour.cs" />
+     <Compile Include="Assets\Scripts\Other\GameStartBehaviour.cs" />
      <Compile Include="Assets\Scripts\PSEffect.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\Command.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\InputHandler.cs" />
@@ -61,6 +64,7 @@
      <Compile Include="Assets\Scripts\Patterns\Decorator\PowerUp.cs" />
      <Compile Include="Assets\Scripts\Patterns\Decorator\PowerUpBehaviour.cs" />
      <Compile Include="Assets\Scripts\Patterns\Decorator\PowerUpController.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Decorator\PowerUpObjectBehaviour.cs" />
      <Compile Include="Assets\Scripts\Patterns\Decorator\WalkFasterPowerUp.cs" />
      <Compile Include="Assets\Scripts\Patterns\Factory\Creator.cs" />
      <Compile Include="Assets\Scripts\Patterns\Factory\FactoryBehaviour.cs" />
@@ -90,13 +94,14 @@
      <Compile Include="Assets\Scripts\Patterns\State\IdleAIState.cs" />
      <Compile Include="Assets\Scripts\Patterns\State\WalkAIState.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\RotateObject.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>D:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
- <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ <HintPath>D:/Program Files (x86)/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
