--- a/MetroidVania/Assembly-CSharp-Editor.csproj
+++ b/MetroidVania/Assembly-CSharp-Editor.csproj
@@ -46,7 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
+     <Compile Include="Assets\Editor\CrossPlatformInputInitialize.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -88,8 +88,6 @@
  </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{F0DD1E05-1D53-58FD-BD7C-0422BE5B4438}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{CE329B9C-7C9D-3F60-0A1E-F2C3E2E74100}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
   </ItemGroup>
