*Player(NEW) added to replace the old one
This player makes use of the command pattern for its actions.
Some of the behaviour classes have been tweaked to use the localscale of the gameobject instead of a charactercontroller2d member. This way it works for all gameobjects.

The player largely is animated, but the jump animation is not factored in yet, I am trying to keep the old animators entirely intact.

--- a/MetroidVania/Assembly-CSharp-vs.csproj
+++ b/MetroidVania/Assembly-CSharp-vs.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\Scripts\Patterns\Command\Command.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\InputHandler.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\JumpCommand.cs" />
+     <Compile Include="Assets\Scripts\Patterns\Command\ShootCommand.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\WalkLeftCommand.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\WalkRightCommand.cs" />
      <Compile Include="Assets\Scripts\Patterns\Decorator\Component.cs" />
@@ -105,13 +106,13 @@
      <Compile Include="Assets\Scripts\Patterns\State\IdleAIState.cs" />
      <Compile Include="Assets\Scripts\Patterns\State\WalkAIState.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\Restarter.cs" />
      <Compile Include="Assets\Scripts\RotateObject.cs" />
+     <Compile Include="Assets\Scripts\ShootBehaviour.cs" />
      <Compile Include="Assets\Scripts\Standard Assets\Camera2DFollow.cs" />
      <Compile Include="Assets\Scripts\Standard Assets\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\Standard Assets\Platformer2DUserControl.cs" />
      <Compile Include="Assets\Scripts\Standard Assets\PlatformerCharacter2D.cs" />
-     <Compile Include="Assets\Scripts\Standard Assets\Restarter.cs" />
-     <Compile Include="Assets\Scripts\Standard Assets\ShootBehaviour.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
