--- a/MetroidVania/Assembly-CSharp-vs.csproj
+++ b/MetroidVania/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
      <Compile Include="Assets\CrossPlatformInput\Scripts\AxisTouchButton.cs" />
      <Compile Include="Assets\CrossPlatformInput\Scripts\ButtonHandler.cs" />
      <Compile Include="Assets\CrossPlatformInput\Scripts\CrossPlatformInputManager.cs" />
