*level 4 added *cleaned project files from unused scripts/prefabs(might have missed some still)

--- a/MetroidVania/Assembly-CSharp-vs.csproj
+++ b/MetroidVania/Assembly-CSharp-vs.csproj
@@ -39,29 +39,20 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files/Unity/Unity_5.0.1f1/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files/Unity/Unity_5.0.1f1/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\CrossPlatformInput\Scripts\AxisTouchButton.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\ButtonHandler.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\CrossPlatformInputManager.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\InputAxisScrollbar.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\Joystick.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\MobileControlRig.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\PlatformSpecific\MobileInput.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\PlatformSpecific\StandaloneInput.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\TiltInput.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\TouchPad.cs" />
-     <Compile Include="Assets\CrossPlatformInput\Scripts\VirtualInput.cs" />
      <Compile Include="Assets\Scripts\DieBehaviour.cs" />
      <Compile Include="Assets\Scripts\KillOnHitBehaviour.cs" />
+     <Compile Include="Assets\Scripts\Other\Camera2DFollow.cs" />
      <Compile Include="Assets\Scripts\Other\GameEndBehaviour.cs" />
      <Compile Include="Assets\Scripts\Other\GameStartBehaviour.cs" />
      <Compile Include="Assets\Scripts\Other\MenuBehaviour.cs" />
+     <Compile Include="Assets\Scripts\Other\PlatformerCharacter2D.cs" />
      <Compile Include="Assets\Scripts\PSEffect.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\Command.cs" />
      <Compile Include="Assets\Scripts\Patterns\Command\InputHandler.cs" />
@@ -107,15 +98,11 @@
      <Compile Include="Assets\Scripts\Restarter.cs" />
      <Compile Include="Assets\Scripts\RotateObject.cs" />
      <Compile Include="Assets\Scripts\ShootBehaviour.cs" />
-     <Compile Include="Assets\Scripts\Standard Assets\Camera2DFollow.cs" />
-     <Compile Include="Assets\Scripts\Standard Assets\CameraFollow.cs" />
-     <Compile Include="Assets\Scripts\Standard Assets\Platformer2DUserControl.cs" />
-     <Compile Include="Assets\Scripts\Standard Assets\PlatformerCharacter2D.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files/Unity/Unity_5.0.1f1/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
- <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ <HintPath>C:/Program Files/Unity/Unity_5.0.1f1/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
